Helpers/Test.Api/testapi-k8s/testapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapi
  namespace: onaimhub
  labels:
    app: testapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testapi
  template:
    metadata:
      labels:
        app: testapi
    spec:
      containers:
        - name: testapi
          image: gvgroup/onaim-helpers_test_api:latest  # Replace with your DockerHub image path
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /app/appsettings.json
              name: testapi-cm0
              subPath: appsettings.json
      restartPolicy: Always
      imagePullSecrets:
        - name: dockerhub-secret
      volumes:
        - configMap:
            items:
              - key: appsettings.json
                path: appsettings.json
            name: testapi-cm0
          name: testapi-cm0
