Helpers/Test.Api/testapi-k8s/testapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testapi
  namespace: onaimhub
spec:
  ports:
    - name: "5005"
      port: 5005
      targetPort: 8080
  selector:
    app: testapi
  type: ClusterIP



# apiVersion: v1
# kind: Service
# metadata:
#   annotations:
#     kompose.cmd: C:\Users\user3\Desktop\kompose.exe convert
#     kompose.version: 1.34.0 (cbf2835db)
#   labels:
#     io.kompose.service: testapi
#   name: testapi
# spec:
#   ports:
#     - name: "5005"
#       port: 5005
#       targetPort: 8080
#   selector:
#     io.kompose.service: testapi
