Helpers/Test.Api/testapi-k8s/testapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testapi-ingress
  namespace: onaimhub
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # Set to "true" if SSL is configured
spec:
  ingressClassName: nginx
  rules:
    - host: onaim.testapi.dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: testapi
                port:
                  number: 5005
